Gather the resources and make the skeleton file
changed the previous design and image for being crude and this is the new one with improved and easy ui.

--- a/index.html
+++ b/index.html
@@ -7,72 +7,5 @@
     <link rel="stylesheet" href="assets/css files/style.css" />
     <script src="assets/js files/main.js"></script>
   </head>
-  <body>
-    <header>
-      <div class="logo">
-        <img src="assets/images/mydistrict-high-resolution-logo-transparent.svg" alt="" id="logo">
-      </div>
-      <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a>
-                <ul>
-                    <li><a href="#">Online Application Portal</a></li>
-                    <li><a href="#">Real-time Status Tracking</a></li>
-                    <li><a href="#">Complaint Management</a></li>
-                    <li><a href="#">Document Management</a></li>
-                    <li><a href="#">Community Engagement</a></li>
-                    </ul>
-            </li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-    </header>
-
-    <section>
-      <h1>Welcome to Your District, Simplified</h1>
-      <p>Your gateway to efficient and transparent public services.</p>
-  </section>
-
-  <section>
-      <h2>Empowering Your Community</h2>
-      <p>The District Management System (DMS) is your one-stop solution for all your district-related needs. We're committed to making your interactions with the government smooth and efficient.</p>
-      <p>With DMS, you can:</p>
-      <ul>
-          <li><strong>Access essential services online</strong>: Save time and effort by applying for various services, from birth certificates to building permits, directly from your home or office.</li>
-          <li><strong>Track the status of your applications</strong>: Monitor the progress of your applications in real-time and receive timely updates.</li>
-          <li><strong>Submit complaints and feedback</strong>: Share your concerns and suggestions directly with the relevant authorities and track their resolution.</li>
-          <li><strong>Access important documents and records</strong>: Retrieve essential documents like property records, licenses, and permits with ease.</li>
-      </ul>
-  </section>
-
-  <section>
-      <h2>Your District, Your Way</h2>
-      <p>We believe in transparency and accountability. With DMS, you have the power to:</p>
-      <ul>
-          <li><strong>Stay informed</strong>: Access the latest news, announcements, and notifications from the district.</li>
-          <li><strong>Participate in decision-making</strong>: Share your opinions and ideas on various district initiatives.</li>
-          <li><strong>Hold us accountable</strong>: Report any issues or concerns and track their resolution.</li>
-      </ul>
-  </section>
-
-  <section>
-      <h2>Get Started Today</h2>
-      <p>Experience the convenience of DMS. Start your journey towards a more efficient and transparent district.</p>
-      <a href="#" class="button">Create an Account</a>
-      <a href="#" class="button">Login</a>
-  </section>
-
-  <footer>
-      <h2>Contact Us</h2>
-      <p>
-          <strong>District Office</strong><br>
-          [District Name]<br>
-          [District Address]<br>
-          [Phone Number]<br>
-          [Email Address]
-      </p>
-  </footer>
-  </body>
+  <body></body>
 </html>
