Complete the hero and features sections

--- a/index.html
+++ b/index.html
@@ -7,5 +7,94 @@
     <link rel="stylesheet" href="assets/css files/style.css" />
     <script src="assets/js files/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="bgc-img"></div>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="title"><h1>MyDistrict</h1></div>
+      <button>
+        <a href="#">Services</a>
+      </button>
+    </header>
+
+    <section class="hero">
+      <div>
+        <h2>Welcome to Your District, Simplified</h2>
+        <div class="para">
+          <p>
+            A new era of citizen engagement. Our platform connects you directly
+            with your district, making it easier to get things done and stay
+            informed.
+          </p>
+          <p>
+            Your district, your way. Our platform empowers you to access
+            essential services online, anytime, anywhere. Simplify your life
+            today.
+          </p>
+        </div>
+        <div class="btns">
+          <button>
+            <a href="#">Get Started</a>
+          </button>
+          <button>
+            <a href="#">Learn More</a>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="left-side">
+        <h2>Empowering Your Community</h2>
+        <p>
+          We are your one-stop solution for all your district-related needs.
+          We're committed to making your interactions with the government smooth
+          and efficient.
+        </p>
+        <div class="container">
+          <div class="box">
+            <img src="assets/images/Icon.png" alt="icons" />
+            <h3>Online Services</h3>
+            <p>
+              Access essential services online, simplifying your life. No more
+              long queues or time-consuming paperwork.
+            </p>
+          </div>
+          <div class="box">
+            <img src="assets/images/Icon.png" alt="icons" />
+            <h3>Online Services</h3>
+            <p>
+              Access essential services online, simplifying your life. No more
+              long queues or time-consuming paperwork.
+            </p>
+          </div>
+          <div class="box">
+            <img src="assets/images/Icon.png" alt="icons" />
+            <h3>Online Services</h3>
+            <p>
+              Access essential services online, simplifying your life. No more
+              long queues or time-consuming paperwork.
+            </p>
+          </div>
+          <div class="box">
+            <img src="assets/images/Icon.png" alt="icons" />
+            <h3>Online Services</h3>
+            <p>
+              Access essential services online, simplifying your life. No more
+              long queues or time-consuming paperwork.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="right-side">
+        <img src="assets/images/empowering.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
