Add the uses-cases, take-action and footer section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>District Management System</title>
     <link rel="stylesheet" href="assets/css files/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <script src="assets/js files/main.js"></script>
   </head>
   <body>
@@ -96,5 +100,113 @@
         <img src="assets/images/empowering.png" alt="" />
       </div>
     </section>
+
+    <section class="use-cases">
+      <div class="use-case">
+        <div class="left-side">
+          <img
+            src="assets/images/stay_informed.png"
+            alt="stay informed image"
+          />
+        </div>
+        <div class="right-side">
+          <h2>Stay informed</h2>
+          <p>
+            Stay up-to-date with the latest news, announcements, and
+            notifications from your district. Access important information
+            directly from your device.
+          </p>
+          <p>
+            Stay informed about community events, public meetings, and emergency
+            alerts. Be the first to know about important developments and
+            changes affecting your district.
+          </p>
+        </div>
+      </div>
+      <div class="use-case">
+        <div class="left-side">
+          <img
+            src="assets/images/doc_storage.png"
+            alt="document storage image"
+          />
+        </div>
+        <div class="right-side">
+          <h2>Secure Document Storage</h2>
+          <p>
+            Access and manage important documents securely. Store and retrieve
+            official documents, records, and reports. Our robust document
+            management system ensures the safety and accessibility of your
+            critical information.
+          </p>
+          <p>
+            Easily search, filter, and download the documents you need, whenever
+            you need them.
+          </p>
+        </div>
+      </div>
+      <div class="use-case">
+        <div class="left-side">
+          <img
+            src="assets/images/hold_resposible.png"
+            alt="hold responsible image"
+          />
+        </div>
+        <div class="right-side">
+          <h2>Hold Us Accountable</h2>
+          <p>
+            Report issues and concerns directly to the relevant authorities.
+            Track the progress of your reports and ensure transparency in the
+            resolution process.
+          </p>
+          <p>
+            Be part of a more transparent and accountable government. Promote
+            transparency and accountability by reporting any instances of
+            corruption, fraud, or unethical practices.
+          </p>
+          <button class="learn-more"><a href="#">Learn More</a></button>
+        </div>
+      </div>
+    </section>
+
+    <section class="take-action">
+      <div class="rect"></div>
+      <div class="get-started">
+        <h2>Get Started Today</h2>
+        <p>
+          Experience the convenience of MyDistrict. Start your journey towards a
+          more efficient and transparent district.
+        </p>
+        <h2>Your District, Your Way</h2>
+        <p>Experience the Difference</p>
+        <button><a href="#">Dive Right In</a></button>
+      </div>
+    </section>
+
+    <footer>
+      <div class="upper">
+        <p>©2025 mydistrict@simple.et</p>
+        <h3>MyDistrict</h3>
+        <button>
+          <a href="#">Join Now</a>
+        </button>
+      </div>
+      <hr>
+      <div class="lower">
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
