Add a hovering effects for buttons

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           </p>
         </div>
         <div class="btns">
-          <button>
+          <button class="button">
             <a href="#">Get Started</a>
           </button>
-          <button>
+          <button class="button">
             <a href="#">Learn More</a>
           </button>
         </div>
@@ -163,7 +163,7 @@
             transparency and accountability by reporting any instances of
             corruption, fraud, or unethical practices.
           </p>
-          <button class="learn-more"><a href="#">Learn More</a></button>
+          <button class="learn-more button"><a href="#">Learn More</a></button>
         </div>
       </div>
     </section>
@@ -178,7 +178,7 @@
         </p>
         <h2>Your District, Your Way</h2>
         <p>Experience the Difference</p>
-        <button><a href="#">Dive Right In</a></button>
+        <button class="effect"><a href="#">Dive Right In</a></button>
       </div>
     </section>
 
@@ -186,7 +186,7 @@
       <div class="upper">
         <p>©2025 mydistrict@simple.et</p>
         <h3>MyDistrict</h3>
-        <button>
+        <button class="effect">
           <a href="#">Join Now</a>
         </button>
       </div>
