Correct the repeating in the features section

--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
           </div>
           <div class="box">
             <img src="assets/images/Icon.png" alt="icons" />
-            <h3>Online Services</h3>
+            <h3>Document Access</h3>
             <p>
-              Access essential services online, simplifying your life. No more
-              long queues or time-consuming paperwork.
+              Access important documents easily. Our secure system ensures your
+              information is always safe and accessible.
             </p>
           </div>
           <div class="box">
             <img src="assets/images/Icon.png" alt="icons" />
-            <h3>Online Services</h3>
+            <h3>Real-time Tracking</h3>
             <p>
-              Access essential services online, simplifying your life. No more
-              long queues or time-consuming paperwork.
+              Stay informed with real-time updates. Monitor the progress of your
+              applications and receive timely notifications.
             </p>
           </div>
           <div class="box">
             <img src="assets/images/Icon.png" alt="icons" />
-            <h3>Online Services</h3>
+            <h3>Feedback & Complaints</h3>
             <p>
-              Access essential services online, simplifying your life. No more
-              long queues or time-consuming paperwork.
+              Share your feedback and complaints directly. Help us improve our
+              services and address issues promptly.
             </p>
           </div>
         </div>
@@ -190,7 +190,7 @@
           <a href="#">Join Now</a>
         </button>
       </div>
-      <hr>
+      <hr />
       <div class="lower">
         <nav>
           <ul>
