Committing changes before rewriting history

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="btns">
           <button class="button">
-            <a href="#">Get Started</a>
+            <a href="assets/pages/login.html">Get Started</a>
           </button>
           <button class="button">
             <a href="#">Learn More</a>
