Added about page with a little animation

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="assets/pages/about.html">About</a></li>
+          <li><a href="assets/pages/contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="title"><h1>MyDistrict</h1></div>
       <button>
-        <a href="#">Services</a>
+        <a href="assets/pages/services.html">Services</a>
       </button>
     </header>
 
@@ -107,6 +107,7 @@
           <img
             src="assets/images/stay_informed.png"
             alt="stay informed image"
+            class="bounce"
           />
         </div>
         <div class="right-side">
@@ -128,6 +129,7 @@
           <img
             src="assets/images/doc_storage.png"
             alt="document storage image"
+            class="bounce"
           />
         </div>
         <div class="right-side">
@@ -149,6 +151,7 @@
           <img
             src="assets/images/hold_resposible.png"
             alt="hold responsible image"
+            class="bounce"
           />
         </div>
         <div class="right-side">
@@ -176,9 +179,11 @@
           Experience the convenience of MyDistrict. Start your journey towards a
           more efficient and transparent district.
         </p>
-        <h2>Your District, Your Way</h2>
+        <h2>
+          <span class="alternate-text">Your District,</span> <span class="alternate-text">Your Way</span>
+        </h2>
         <p>Experience the Difference</p>
-        <button class="effect"><a href="#">Dive Right In</a></button>
+        <button class="effect"><a href="assets/pages/login.html">Dive Right In</a></button>
       </div>
     </section>
 
@@ -187,7 +192,7 @@
         <p>©2025 mydistrict@simple.et</p>
         <h3>MyDistrict</h3>
         <button class="effect">
-          <a href="#">Join Now</a>
+          <a href="assets/pages/login.html">Join Now</a>
         </button>
       </div>
       <hr />
