Second Project which added

--- a/assets/pages/services.html
+++ b/assets/pages/services.html
@@ -1,146 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Services - MyDistrict</title>
-    <link rel="stylesheet" href="../css files/services.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css files/services.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html" class="active">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <section class="hero">
-            <h1 class="animate-title">Our Services</h1>
-            <p class="animate-text">Empowering communities with efficient and transparent district-level operations.</p>
-        </section>
+      <section class="hero">
+        <h1 class="animate-title">Our Services</h1>
+        <p class="animate-text">
+          Empowering communities with efficient and transparent district-level
+          operations.
+        </p>
+      </section>
 
-        <section class="services-grid">
-            <div class="service-card animate-card">
-                <i class="fas fa-user-circle"></i>
-                <h2>Citizen Services</h2>
-                <ul>
-                    <li>Online Application Portal</li>
-                    <li>Real-time Status Tracking</li>
-                    <li>Document Upload & Verification</li>
-                    <li>Fee Payment Integration</li>
-                    <li>SMS/Email Notifications</li>
-                </ul>
-            </div>
-            <div class="service-card animate-card">
-                <i class="fas fa-comments"></i>
-                <h2>Complaint Management</h2>
-                <ul>
-                    <li>Online Complaint Registration</li>
-                    <li>Complaint Tracking</li>
-                    <li>Escalation Mechanism</li>
-                    <li>Feedback & Rating</li>
-                </ul>
-            </div>
-            <div class="service-card animate-card">
-                <i class="fas fa-file-alt"></i>
-                <h2>Document Management</h2>
-                <ul>
-                    <li>Document Storage</li>
-                    <li>Document Retrieval</li>
-                    <li>Document Version Control</li>
-                </ul>
-            </div>
-        </section>
+      <section class="services-grid">
+        <div class="service-card animate-card">
+          <i class="fas fa-user-circle"></i>
+          <h2>Citizen Services</h2>
+          <ul>
+            <li>Online Application Portal</li>
+            <li>Real-time Status Tracking</li>
+            <li>Document Upload & Verification</li>
+            <li>Fee Payment Integration</li>
+            <li>SMS/Email Notifications</li>
+          </ul>
+        </div>
+        <div class="service-card animate-card">
+          <i class="fas fa-comments"></i>
+          <h2>Complaint Management</h2>
+          <ul>
+            <li>Online Complaint Registration</li>
+            <li>Complaint Tracking</li>
+            <li>Escalation Mechanism</li>
+            <li>Feedback & Rating</li>
+          </ul>
+        </div>
+        <div class="service-card animate-card">
+          <i class="fas fa-file-alt"></i>
+          <h2>Document Management</h2>
+          <ul>
+            <li>Document Storage</li>
+            <li>Document Retrieval</li>
+            <li>Document Version Control</li>
+          </ul>
+        </div>
+      </section>
 
-        <section class="feature-showcase">
-            <h2 class="animate-title">Featured Services</h2>
-            <div class="feature-container">
-                <div class="feature animate-feature">
-                    <i class="fas fa-certificate"></i>
-                    <h3>Certificate Applications</h3>
-                    <p>Apply for birth, marriage, and other certificates online.</p>
-                </div>
-                <div class="feature animate-feature">
-                    <i class="fas fa-building"></i>
-                    <h3>Permits and Licenses</h3>
-                    <p>Submit applications for various permits and licenses electronically.</p>
-                </div>
-                <div class="feature animate-feature">
-                    <i class="fas fa-money-bill-wave"></i>
-                    <h3>Tax and Bill Payments</h3>
-                    <p>Pay property taxes and utility bills through our secure payment gateway.</p>
-                </div>
-                <div class="feature animate-feature">
-                    <i class="fas fa-graduation-cap"></i>
-                    <h3>Scholarship Applications</h3>
-                    <p>Apply for educational scholarships and track your application status.</p>
-                </div>
-            </div>
-        </section>
+      <section class="feature-showcase">
+        <h2 class="animate-title">Featured Services</h2>
+        <div class="feature-container">
+          <div class="feature animate-feature">
+            <i class="fas fa-certificate"></i>
+            <h3>Certificate Applications</h3>
+            <p>Apply for birth, marriage, and other certificates online.</p>
+          </div>
+          <div class="feature animate-feature">
+            <i class="fas fa-building"></i>
+            <h3>Permits and Licenses</h3>
+            <p>
+              Submit applications for various permits and licenses
+              electronically.
+            </p>
+          </div>
+          <div class="feature animate-feature">
+            <i class="fas fa-money-bill-wave"></i>
+            <h3>Tax and Bill Payments</h3>
+            <p>
+              Pay property taxes and utility bills through our secure payment
+              gateway.
+            </p>
+          </div>
+          <div class="feature animate-feature">
+            <i class="fas fa-graduation-cap"></i>
+            <h3>Scholarship Applications</h3>
+            <p>
+              Apply for educational scholarships and track your application
+              status.
+            </p>
+          </div>
+        </div>
+
+        <div class="service-call-btn">
+          <button class="button"><a href="./service-panel.html">View Services</a></button>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 MyDistrict. All rights reserved.</p>
+      <p>&copy; 2024 MyDistrict. All rights reserved.</p>
     </footer>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-    // Animate service cards
-    const cards = document.querySelectorAll('.animate-card');
-    const animateCards = () => {
-        cards.forEach((card, index) => {
+      document.addEventListener("DOMContentLoaded", function () {
+        // Animate service cards
+        const cards = document.querySelectorAll(".animate-card");
+        const animateCards = () => {
+          cards.forEach((card, index) => {
             if (isElementInViewport(card)) {
-                setTimeout(() => {
-                    card.style.animation = `fadeInUp 1s ease-out ${index * 0.2}s forwards`;
-                }, 100);
+              setTimeout(() => {
+                card.style.animation = `fadeInUp 1s ease-out ${
+                  index * 0.2
+                }s forwards`;
+              }, 100);
             }
-        });
-    };
+          });
+        };
 
-    // Animate features
-    const features = document.querySelectorAll('.animate-feature');
-    const animateFeatures = () => {
-        features.forEach((feature, index) => {
+        // Animate features
+        const features = document.querySelectorAll(".animate-feature");
+        const animateFeatures = () => {
+          features.forEach((feature, index) => {
             if (isElementInViewport(feature)) {
-                setTimeout(() => {
-                    feature.style.animation = index % 2 === 0 
-                        ? 'slideInLeft 1s ease-out forwards'
-                        : 'slideInRight 1s ease-out forwards';
-                }, index * 200);
+              setTimeout(() => {
+                feature.style.animation =
+                  index % 2 === 0
+                    ? "slideInLeft 1s ease-out forwards"
+                    : "slideInRight 1s ease-out forwards";
+              }, index * 200);
             }
-        });
-    };
+          });
+        };
 
-    // Check if element is in viewport
-    function isElementInViewport(el) {
-        const rect = el.getBoundingClientRect();
-        return (
+        // Check if element is in viewport
+        function isElementInViewport(el) {
+          const rect = el.getBoundingClientRect();
+          return (
             rect.top >= 0 &&
             rect.left >= 0 &&
-            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-            rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-        );
-    }
+            rect.bottom <=
+              (window.innerHeight || document.documentElement.clientHeight) &&
+            rect.right <=
+              (window.innerWidth || document.documentElement.clientWidth)
+          );
+        }
 
-    // Run animations on scroll
-    window.addEventListener('scroll', () => {
+        // Run animations on scroll
+        window.addEventListener("scroll", () => {
+          animateCards();
+          animateFeatures();
+        });
+
+        // Initial animation call
         animateCards();
         animateFeatures();
-    });
-
-    // Initial animation call
-    animateCards();
-    animateFeatures();
-});
-
-
+      });
     </script>
-</body>
+  </body>
 </html>
-
