--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <script src="assets/js files/main.js"></script>
   </head>
   <body>
     <div class="bgc-img"></div>
@@ -47,7 +46,7 @@
             <a href="assets/pages/login.html">Get Started</a>
           </button>
           <button class="button">
-            <a href="#">Learn More</a>
+            <a href="./assets/pages/about.html">Learn More</a>
           </button>
         </div>
       </div>
@@ -134,6 +133,7 @@
         </div>
         <div class="right-side">
           <h2>Secure Document Storage</h2>
+          `
           <p>
             Access and manage important documents securely. Store and retrieve
             official documents, records, and reports. Our robust document
@@ -166,7 +166,7 @@
             transparency and accountability by reporting any instances of
             corruption, fraud, or unethical practices.
           </p>
-          <button class="learn-more button"><a href="#">Learn More</a></button>
+          <button class="learn-more button"><a href="./assets/pages/about.html">Learn More</a></button>
         </div>
       </div>
     </section>
@@ -199,9 +199,9 @@
       <div class="lower">
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./assets/pages/about.html">About</a></li>
+            <li><a href="./assets/pages/contact.html">Contact</a></li>
           </ul>
         </nav>
         <div class="icons">
